# bg12rust

./: .gitignore  AGENTS.md  Cargo.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
src/: lib.rs
tests/: integration_test.rs
