[package]
name = "bg12rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poker_sim"
path = "src/bin/poker_sim.rs"

[dependencies]
rand = "0.8"
ark-secp256k1 = "0.5"
ark-std = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
sha2 = "0.10"
zeroize = "1.7"

[features]
std = ["ark-std/std"]
