[package]
name = "bg12rust"
version = "0.1.0"
edition = "2021"
description = "Bayer-Groth 2012 mental poker library implementing zero-knowledge shuffle proofs in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anomalyco/bg12rust"
keywords = ["cryptography", "zero-knowledge", "mental-poker", "shuffle-proof"]
categories = ["cryptography"]

[[bin]]
name = "poker_sim"
path = "src/bin/poker_sim.rs"

[dependencies]
rand = "0.8"
ark-secp256k1 = "0.5"
ark-std = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
sha2 = "0.10"
zeroize = "1.7"

[features]
std = ["ark-std/std"]
